# hexastore

./: CMakeLists.txt  LICENSE.txt  README.md
data/: first_names.csv  last_names.csv  most_popular_names.csv  names.csv
include/hexastore/: .hexastore.h.swp  csv.h  dataset.h  datastore.h  datatypes.h  fundamental_types.h  generic_query.hpp  hexastore.h  hexastore.hpp  internals.h  operations.h  output.h  query.h  query_chain.h  query_iterator.h  query_iterator.hpp  query_iterator_functors.h  query_template_functions.hpp  relationships.h  subquery_iterator.h  subquery_iterator.hpp  triangle_detection.h  utility.h
python/: random_name_generator.py
src/: csv.cpp  dataset.cpp  datastore.cpp  datatypes.cpp  hexastore.cpp  main.cpp  operations.cpp  output.cpp  query_chain.cpp  timing.cpp  triangle_detection.cpp  utility.cpp
test/: gen_test.sh  hexastore_test.h  test.cpp
